--- a/Battery-Indicator.html
+++ b/Battery-Indicator.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Battery Indicator</title>
-  <link rel="stylesheet" type="text/css" href="fa/css/all.min.css"/>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   
   <style>
   
